--- a/MyFirstApp/res/layout/activity_main.xml
+++ b/MyFirstApp/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:baselineAligned="false"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="horizontal" >
@@ -10,14 +11,14 @@
         android:layout_weight="1"
         android:layout_height="match_parent"
         android:layout_marginTop="?android:attr/actionBarSize"
-        class="com.example.android.rssfeed.MyListFragment" ></fragment>
+        class="com.example.myfirstapp.MyListFragment" ></fragment>
 
     <fragment
         android:id="@+id/detailFragment"
         android:layout_width="0dp"
         android:layout_weight="2"
         android:layout_height="match_parent"
-        class="com.example.android.rssfeed.DetailFragment" >
+        class="com.example.myfirstapp.DetailFragment" >
         <!-- Preview: layout=@layout/details -->
     </fragment>
 
