Changed the app so that it runs again

--- a/GrAsApp/res/layout/fragment_home_screen_dummy.xml
+++ b/GrAsApp/res/layout/fragment_home_screen_dummy.xml
@@ -9,6 +9,7 @@
     tools:context=".HomeScreen$DummySectionFragment" >
 
     <TextView
+        android:textIsSelectable="true"
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
