--- a/TaskAssignmentTest/res/layout/activity_task_assignent.xml
+++ b/TaskAssignmentTest/res/layout/activity_task_assignent.xml
@@ -20,40 +20,95 @@
         android:id="@+id/taskPrototypesView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/labelTask" 
-        android:gravity="center">
+        android:layout_below="@id/labelTask"
+        android:gravity="center" >
 
         <LinearLayout
             android:id="@+id/taskPrototypes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">    
-            <!--  radio buttons -->        
-        </LinearLayout>   
+            android:orientation="horizontal" >
+
+            <!-- radio buttons -->
+        </LinearLayout>
     </HorizontalScrollView>
-    
+
     <TextView
         android:id="@+id/labelDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/labelDate" 
         android:layout_below="@id/taskPrototypesView"
-        />
-
-    <DatePicker
-        android:id="@+id/datePicker"
+        android:text="@string/labelDate" />
+   <!-- 
+    <LinearLayout
+        android:id="@+id/timeDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/labelDate" 
-        android:layout_toLeftOf="@+id/timePicker"/>
+        android:layout_below="@id/labelDate"
+        android:orientation="horizontal"
+        android:padding="0dp" >
 
-    <TimePicker
-        android:id="@id/timePicker"
+        <DatePicker
+            android:id="@+id/datePicker"
+            android:layout_width="wrap_content"
+            android:layout_height="125dp"
+            android:layout_weight="1"
+            android:calendarViewShown="false"
+            android:textSize="16sp" />
+
+        <TimePicker
+            android:id="@+id/timePicker"
+            android:layout_width="fill_parent"
+            android:layout_height="125dp"
+            android:layout_weight="2"
+            android:textSize="16sp"
+            />
+    </LinearLayout> -->
+
+ <EditText
+        android:id="@+id/editDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/labelDate"
-        android:layout_toRightOf="@id/datePicker" />
+        android:layout_below="@id/labelDate"
+        android:ems="10"
+        android:inputType="date" >
 
+        <requestFocus />
+    </EditText>
+
+    <EditText
+        android:id="@+id/editTime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_below="@id/labelDate"
+		android:layout_toRightOf="@id/editDate"
+        android:ems="10"
+        android:inputType="time" />
+
+    <TextView
+        android:id="@+id/labelPeople"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/labelDate"
+        android:text="@string/labelPeople" />
+
+    <LinearLayout
+        android:id="@+id/taskPeople"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <!-- people badges -->
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/buttonCreate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:text="@string/buttonCreate" />
+
+   
+    
 </RelativeLayout>
