--- a/NestedFragments/res/layout/activity_calendar.xml
+++ b/NestedFragments/res/layout/activity_calendar.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="0dp"
-    tools:contex=".CalendarFragment" >
+    tools:context=".CalendarFragment" >
 
     <!-- android:paddingTop="@dimen/activity_vertical_margin" -->
 
