--- a/CalendarTest/res/layout/task_fragment.xml
+++ b/CalendarTest/res/layout/task_fragment.xml
@@ -1,4 +1,5 @@
-<!-- <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+ <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,20 +7,24 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".CalendarActivity" > -->
-    
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".CalendarActivity" >
+-->
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ListView android:id="@id/android:list"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent"
-               android:drawSelectorOnTop="false"/>
-    
-    <!-- <TextView
+    <ListView
+        android:id="@id/android:list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:drawSelectorOnTop="false" />
+
+    <!--
+         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" /> -->
+        android:text="@string/hello_world" />
+    -->
 
 </RelativeLayout>
