--- a/NestedFragments/res/menu/main.xml
+++ b/NestedFragments/res/menu/main.xml
@@ -5,5 +5,14 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-
+    
+   	 <item android:id="@+id/menu_refresh"
+          android:icon="@drawable/ic_menu_refresh"
+          android:title="@string/menu_refresh"
+          android:showAsAction="ifRoom|withText" />
+     
+     <item android:id="@+id/menu_add"
+          android:icon="@android:drawable/ic_menu_add"
+          android:title="@string/menu_add"
+          android:showAsAction="ifRoom|withText" />
 </menu>
