--- a/CalendarTest/res/layout/task_fragment.xml
+++ b/CalendarTest/res/layout/task_fragment.xml
@@ -1,3 +1,8 @@
+<?xml version="1.0" encoding="utf-8"?>
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 <!--
  <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -9,11 +14,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".CalendarActivity" >
 -->
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-
     <ListView
         android:id="@id/android:list"
         android:layout_width="match_parent"
