--- a/NestedFragments/res/menu/main.xml
+++ b/NestedFragments/res/menu/main.xml
@@ -9,7 +9,8 @@
    	 <item android:id="@+id/menu_refresh"
           android:icon="@drawable/ic_menu_refresh"
           android:title="@string/menu_refresh"
-          android:showAsAction="ifRoom|withText" />
+          android:showAsAction="ifRoom|withText"
+          />
      
      <item android:id="@+id/menu_add"
           android:icon="@android:drawable/ic_menu_add"
