--- a/TaskAssignmentTest/res/layout/activity_task_assignent.xml
+++ b/TaskAssignmentTest/res/layout/activity_task_assignent.xml
@@ -7,14 +7,41 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TaskAssignent" >
-
+    
     <TextView
-        android:id="@+id/labelTask"
+        android:id="@+id/labelGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
+        android:text="@string/labelGroup" />
+    
+     <LinearLayout
+            android:id="@+id/sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/labelGroup"
+            android:orientation="horizontal" >
+            
+         <Spinner
+		android:layout_width="wrap_content" 
+		android:layout_height="wrap_content" 
+		android:id="@+id/spin"
+		android:entries="@array/groups_array"
+		/>
+
+        </LinearLayout>
+
+       
+    <TextView
+        android:id="@+id/labelTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sp"
         android:text="@string/labelTask" />
+    
+   
+    
 
     <HorizontalScrollView
         android:id="@+id/taskPrototypesView"
@@ -39,7 +66,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/taskPrototypesView"
         android:text="@string/labelDate" />
-   <!-- 
+    
+   
+    
     <LinearLayout
         android:id="@+id/timeDate"
         android:layout_width="wrap_content"
@@ -48,24 +77,23 @@
         android:orientation="horizontal"
         android:padding="0dp" >
 
-        <DatePicker
-            android:id="@+id/datePicker"
-            android:layout_width="wrap_content"
-            android:layout_height="125dp"
-            android:layout_weight="1"
-            android:calendarViewShown="false"
-            android:textSize="16sp" />
-
-        <TimePicker
-            android:id="@+id/timePicker"
-            android:layout_width="fill_parent"
-            android:layout_height="125dp"
-            android:layout_weight="2"
-            android:textSize="16sp"
+         <Button 
+	    android:layout_width="wrap_content" 
+	    android:layout_height="wrap_content"
+	    android:text="@string/pick_time" 
+	    android:onClick="showTimePickerDialog"
+	    android:id="@+id/timepick" />
+    
+    	<Button 
+	    android:layout_width="wrap_content" 
+	    android:layout_height="wrap_content"
+	    android:text="@string/pick_date" 
+	    android:onClick="showDatePickerDialog"
+	    android:id="@+id/datepick"  />
             />
-    </LinearLayout> -->
+    </LinearLayout> 
 
- <EditText
+ <!-- <EditText
         android:id="@+id/editDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -74,32 +102,38 @@
         android:inputType="date" >
 
         <requestFocus />
-    </EditText>
+    </EditText> -->
 
-    <EditText
+    <!--  <EditText
         android:id="@+id/editTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 		android:layout_below="@id/labelDate"
 		android:layout_toRightOf="@id/editDate"
         android:ems="10"
-        android:inputType="time" />
+        android:inputType="time" /> -->
 
     <TextView
         android:id="@+id/labelPeople"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/labelDate"
+        android:layout_below="@id/timeDate"
         android:text="@string/labelPeople" />
+    
+    
 
     <LinearLayout
         android:id="@+id/taskPeople"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
+        
+        
 
         <!-- people badges -->
     </LinearLayout>
+    
+    
 
     <Button
         android:id="@+id/buttonCreate"
@@ -108,6 +142,8 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:text="@string/buttonCreate" />
+    
+    
 
    
     
