--- a/NestedFragments/res/layout/activity_calendar.xml
+++ b/NestedFragments/res/layout/activity_calendar.xml
@@ -34,13 +34,22 @@
     android:layout_below="@id/calendarview"
     android:background="@android:color/darker_gray"/>
 	
-	<fragment
+	<LinearLayout
+	    android:id="@+id/taskFragment"
+	    android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/horizontalbar"
+        android:paddingTop="10dp" >
+        <!-- fragment -->
+	</LinearLayout>
+	    
+	<!-- <fragment
         android:id="@+id/taskFragment"
         android:tag="task_fragment_tag"
         android:name="com.example.newspinproj.TaskFragment"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/horizontalbar"
-        android:paddingTop="10dp" />
+        android:paddingTop="10dp" /> -->
 
 </RelativeLayout>
