--- a/NestedFragments/res/layout/contactlistitem.xml
+++ b/NestedFragments/res/layout/contactlistitem.xml
@@ -28,6 +28,16 @@
         android:layout_toRightOf="@id/contactImage"
         android:layout_alignParentBottom="true"
         android:text="@string/defaultContactNumber" />
+    
+    <ImageView 
+        android:id="@+id/leader_icon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:contentDescription="@string/leader_icon_alt"
+        android:src="@drawable/leader"        
+        />
 
     
 
