--- a/NestedFragments/res/layout/listviewlayout.xml
+++ b/NestedFragments/res/layout/listviewlayout.xml
@@ -47,6 +47,16 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:textSize="15sp" />
+    
+    <ImageView
+        android:id="@+id/star"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/leader"
+        android:contentDescription="@string/alttext_dishes" />
+    
     <!-- 
     <Button android:id="@+id/button"
             android:layout_width="wrap_content"
