--- a/NestedFragments/res/layout/activity_task_assignent.xml
+++ b/NestedFragments/res/layout/activity_task_assignent.xml
@@ -1,94 +1,105 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/taskassign"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".TaskAssignent" >
 
-    <TextView
-        android:id="@+id/labelGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="10dp"
-        android:text="@string/labelGroup" />
-
-    <LinearLayout
-        android:id="@+id/sp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/labelGroup"
-        android:orientation="horizontal" >
-
-        <Spinner
-            android:id="@+id/spin"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:entries="@array/groups_array" />
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/labelTask"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/sp"
-        android:text="@string/labelTask" />
-
-    <HorizontalScrollView
-        android:id="@+id/taskPrototypesView"
+    <ScrollView
+        android:id="@+id/scrollAssignment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/labelTask"
-        android:gravity="center" >
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/buttonDoneLine" >
 
-        <LinearLayout
-            android:id="@+id/taskPrototypes"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/taskassign"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin" >
 
-            <!-- radio buttons -->
-        </LinearLayout>
-    </HorizontalScrollView>
+            <TextView
+                android:id="@+id/labelGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginBottom="100dp"
+                android:layout_marginRight="10dp"
+                android:text="@string/labelGroup" />
 
-    <TextView
-        android:id="@+id/labelDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/taskPrototypesView"
-        android:text="@string/labelDate" />
+            <LinearLayout
+                android:id="@+id/sp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/labelGroup"
+                android:orientation="horizontal" >
 
-    <LinearLayout
-        android:id="@+id/timeDate"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/labelDate"
-        android:orientation="horizontal"
-        android:padding="0dp" >
+                <Spinner
+                    android:id="@+id/spin"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/groups_array" />
+            </LinearLayout>
 
-        <Button
-            android:id="@+id/datepick"
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="3"
-            android:onClick="showDatePickerDialog"
-            android:text="@string/pick_date" />
+            <TextView
+                android:id="@+id/labelTask"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/sp"
+                android:text="@string/labelTask" />
 
-        <Button
-            android:id="@+id/timepick"
-            android:layout_height="wrap_content"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:onClick="showTimePickerDialog"
-            android:text="@string/pick_time" />
-    </LinearLayout>
+            <HorizontalScrollView
+                android:id="@+id/taskPrototypesView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/labelTask"
+                android:gravity="center" >
 
-    <!--
+                <LinearLayout
+                    android:id="@+id/taskPrototypes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal" >
+
+                    <!-- radio buttons -->
+                </LinearLayout>
+            </HorizontalScrollView>
+
+            <TextView
+                android:id="@+id/labelDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/taskPrototypesView"
+                android:text="@string/labelDate" />
+
+            <LinearLayout
+                android:id="@+id/timeDate"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/labelDate"
+                android:orientation="horizontal"
+                android:padding="0dp" >
+
+                <Button
+                    android:id="@+id/datepick"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:onClick="showDatePickerDialog"
+                    android:text="@string/pick_date" />
+
+                <Button
+                    android:id="@+id/timepick"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:onClick="showTimePickerDialog"
+                    android:text="@string/pick_time" />
+            </LinearLayout>
+
+            <!--
     <EditText
         android:id="@+id/editDate"
         android:layout_width="wrap_content"
@@ -99,10 +110,10 @@
 
         <requestFocus />
     </EditText>
-    -->
+            -->
 
 
-    <!--
+            <!--
           <EditText
         android:id="@+id/editTime"
         android:layout_width="wrap_content"
@@ -111,36 +122,51 @@
 		android:layout_toRightOf="@id/editDate"
         android:ems="10"
         android:inputType="time" />
-    -->
+            -->
 
-    <TextView
-        android:id="@+id/labelPeople"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/timeDate"
-        android:text="@string/labelPeople" />
+            <TextView
+                android:id="@+id/labelPeople"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/timeDate"
+                android:text="@string/labelPeople" />
 
-    <LinearLayout
-        android:id="@+id/taskPeople"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/labelPeople"
-        android:orientation="horizontal" >
+            <LinearLayout
+                android:id="@+id/taskPeople"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/labelPeople"
+                android:orientation="horizontal" >
 
-        <Spinner
-            android:id="@+id/spinpeeps"
-            android:layout_width="fill_parent"
+                <Spinner
+                    android:id="@+id/spinpeeps"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:entries="@array/people_array" />
+                <!-- people badges -->
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
+
+     <View
+        android:id="@id/buttonDoneLine"
+        android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:layout_above="@+id/buttonCreate"
+        android:layout_marginBottom="2dp"
+        android:layout_marginTop="2dp"
+        android:background="@android:color/darker_gray" />
+    
+   
+        <Button
+            android:id="@id/buttonCreate"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:entries="@array/people_array" />
-        <!-- people badges -->
-    </LinearLayout>
+            android:text="@string/buttonCreate" 
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            />
 
-    <Button
-        android:id="@+id/buttonCreate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:text="@string/buttonCreate" />
 
 </RelativeLayout>
